--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>HEAVY METAL MINING</h1>
     <script src="sketch.js"></script>
     <script src="p5.play.js"></script>
+    <script src="p5.sound.js"></script>
   </body>
 </html>
